@@ -2,7 +2,7 @@
  * This file is part of Tornado: A heterogeneous programming framework:
  * https://github.com/beehive-lab/tornadovm
  *
- * Copyright (c) 2013-2021, APT Group, Department of Computer Science,
+ * Copyright (c) 2013-2021, 2024, APT Group, Department of Computer Science,
  * The University of Manchester. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
@@ -29,13 +29,12 @@ import static uk.ac.manchester.tornado.runtime.common.Tornado.SHOULD_LOAD_RMI;
 
 import java.lang.reflect.Method;
 import java.util.List;
-import java.util.Map;
 import java.util.ServiceLoader;
-import java.util.WeakHashMap;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ThreadFactory;
-import java.util.stream.Collectors;
+import java.util.concurrent.locks.Lock;
+import java.util.concurrent.locks.ReentrantLock;
 import java.util.stream.StreamSupport;
 
 import org.graalvm.collections.EconomicMap;
@@ -53,18 +52,17 @@ import jdk.vm.ci.meta.MetaAccessProvider;
 import jdk.vm.ci.meta.ResolvedJavaMethod;
 import jdk.vm.ci.runtime.JVMCI;
 import jdk.vm.ci.runtime.JVMCIBackend;
-import uk.ac.manchester.tornado.api.TornadoDriver;
+import uk.ac.manchester.tornado.api.TornadoBackend;
 import uk.ac.manchester.tornado.api.TornadoRuntimeInterface;
 import uk.ac.manchester.tornado.api.enums.TornadoVMBackendType;
+import uk.ac.manchester.tornado.api.exceptions.TornadoBackendNotFound;
 import uk.ac.manchester.tornado.runtime.common.Tornado;
-import uk.ac.manchester.tornado.runtime.common.TornadoAcceleratorDevice;
-import uk.ac.manchester.tornado.runtime.common.TornadoLogger;
 import uk.ac.manchester.tornado.runtime.common.TornadoOptions;
-import uk.ac.manchester.tornado.runtime.common.enums.TornadoDrivers;
+import uk.ac.manchester.tornado.runtime.common.TornadoXPUDevice;
+import uk.ac.manchester.tornado.runtime.common.enums.TornadoBackends;
 import uk.ac.manchester.tornado.runtime.graal.compiler.TornadoSnippetReflectionProvider;
-import uk.ac.manchester.tornado.runtime.tasks.GlobalObjectState;
 
-public final class TornadoCoreRuntime extends TornadoLogger implements TornadoRuntimeInterface {
+public final class TornadoCoreRuntime implements TornadoRuntimeInterface {
 
     private static final ThreadFactory executorThreadFactory = new ThreadFactory() {
         private int threadId = 0;
@@ -81,17 +79,19 @@ public final class TornadoCoreRuntime extends TornadoLogger implements TornadoRu
     private static final TornadoCoreRuntime runtime = new TornadoCoreRuntime();
     private static final JVMMapping JVM = new JVMMapping();
     private static final int DEFAULT_DRIVER = 0;
+
+    private static Lock lock = new ReentrantLock();
+    private static final int DEFAULT_BACKEND = 0;
     private static DebugContext debugContext = null;
     private static OptionValues options;
-    private final Map<Object, GlobalObjectState> objectMappings;
+
     private final JVMCIBackend vmBackend;
     private final HotSpotJVMCIRuntime vmRuntime;
-    private final TornadoVMConfig vmConfig;
-    private TornadoAcceleratorDriver[] tornadoVMDrivers;
-    private int driverCount;
+    private final TornadoVMConfigAccess vmConfig;
+    private final TornadoAcceleratorBackend[] tornadoVMBackends;
+    private int backendCount;
 
     private TornadoCoreRuntime() {
-        objectMappings = new WeakHashMap<>();
 
         initOptions();
         guarantee(!GraalOptions.OmitHotExceptionStacktrace.getValue(options), "error");
@@ -101,8 +101,8 @@ public final class TornadoCoreRuntime extends TornadoLogger implements TornadoRu
         }
         vmRuntime = (HotSpotJVMCIRuntime) JVMCI.getRuntime();
         vmBackend = vmRuntime.getHostJVMCIBackend();
-        vmConfig = new TornadoVMConfig(vmRuntime.getConfigStore(), vmBackend.getMetaAccess());
-        tornadoVMDrivers = loadDrivers();
+        vmConfig = new TornadoVMConfigAccess(vmRuntime.getConfigStore(), vmBackend.getMetaAccess());
+        tornadoVMBackends = loadBackends();
     }
 
     public static TornadoCoreRuntime getTornadoRuntime() {
@@ -110,9 +110,11 @@ public final class TornadoCoreRuntime extends TornadoLogger implements TornadoRu
     }
 
     public static DebugContext getDebugContext() {
+        lock.lock();
         if (debugContext == null) {
             debugContext = new DebugContext.Builder(getOptions(), new GraalDebugHandlersFactory(new TornadoSnippetReflectionProvider())).build();
         }
+        lock.unlock();
         return debugContext;
     }
 
@@ -128,7 +130,7 @@ public final class TornadoCoreRuntime extends TornadoLogger implements TornadoRu
         return runtime.vmRuntime;
     }
 
-    public static TornadoVMConfig getVMConfig() {
+    public static TornadoVMConfigAccess getVMConfig() {
         return runtime.vmConfig;
     }
 
@@ -151,51 +153,36 @@ public final class TornadoCoreRuntime extends TornadoLogger implements TornadoRu
         options = new OptionValues(opts);
     }
 
-    public void clearObjectState() {
-        for (GlobalObjectState gs : objectMappings.values()) {
-            gs.clear();
-        }
-        objectMappings.clear();
-    }
-
-    private TornadoAcceleratorDriver[] loadDrivers() {
-        ServiceLoader<TornadoDriverProvider> loader = ServiceLoader.load(TornadoDriverProvider.class);
-        List<TornadoDriverProvider> providerList = StreamSupport.stream(loader.spliterator(), false).sorted().collect(Collectors.toList());
-        TornadoAcceleratorDriver[] tornadoAcceleratorDrivers = new TornadoAcceleratorDriver[TornadoDrivers.values().length];
+    private TornadoAcceleratorBackend[] loadBackends() {
+        ServiceLoader<TornadoBackendProvider> loader = ServiceLoader.load(TornadoBackendProvider.class);
+        List<TornadoBackendProvider> providerList = StreamSupport.stream(loader.spliterator(), false).sorted().toList();
+        TornadoAcceleratorBackend[] tornadoAcceleratorBackends = new TornadoAcceleratorBackend[TornadoBackends.values().length];
         int index = 0;
-        for (TornadoDriverProvider provider : providerList) {
+        for (TornadoBackendProvider provider : providerList) {
             if (Tornado.FULL_DEBUG) {
-                System.out.println("Loading DRIVER: " + provider);
+                System.out.println(STR."[INFO] Loading Backend: \{provider}");
             }
-            boolean isRMI = provider.getName().equalsIgnoreCase("RMI Driver");
+            boolean isRMI = provider.getName().equalsIgnoreCase("RMI Backend");
             if ((!isRMI) || (isRMI && SHOULD_LOAD_RMI)) {
-                TornadoAcceleratorDriver driver = provider.createDriver(options, vmRuntime, vmConfig);
-                if (driver != null) {
-                    tornadoAcceleratorDrivers[index] = driver;
+                TornadoAcceleratorBackend backend = provider.createBackend(options, vmRuntime, vmConfig);
+                if (backend != null) {
+                    tornadoAcceleratorBackends[index] = backend;
                     index++;
                 }
             }
         }
-        driverCount = index;
-        return tornadoAcceleratorDrivers;
-    }
-
-    public GlobalObjectState resolveObject(Object object) {
-        if (!objectMappings.containsKey(object)) {
-            final GlobalObjectState state = new GlobalObjectState();
-            objectMappings.put(object, state);
-        }
-        return objectMappings.get(object);
+        backendCount = index;
+        return tornadoAcceleratorBackends;
     }
 
     @Override
-    public <D extends TornadoDriver> int getDriverIndex(Class<D> driverClass) {
-        for (int driverIndex = 0; driverIndex < tornadoVMDrivers.length; driverIndex++) {
-            if (tornadoVMDrivers[driverIndex] != null && tornadoVMDrivers[driverIndex].getClass() == driverClass) {
-                return driverIndex;
+    public <D extends TornadoBackend> int getBackendIndex(Class<D> backendClass) {
+        for (int backendIndex = 0; backendIndex < tornadoVMBackends.length; backendIndex++) {
+            if (tornadoVMBackends[backendIndex] != null && tornadoVMBackends[backendIndex].getClass() == backendClass) {
+                return backendIndex;
             }
         }
-        throw shouldNotReachHere("Could not find index for driver: " + driverClass);
+        throw shouldNotReachHere(STR."Could not find index for backend: \{backendClass}");
     }
 
     @Override
@@ -212,23 +199,26 @@ public final class TornadoCoreRuntime extends TornadoLogger implements TornadoRu
     }
 
     @Override
-    public TornadoAcceleratorDriver getDriver(int index) {
-        return tornadoVMDrivers[index];
+    public TornadoAcceleratorBackend getBackend(int index) {
+        if (index > tornadoVMBackends.length) {
+            throw new TornadoBackendNotFound("Tornado Backend Not Found");
+        }
+        return tornadoVMBackends[index];
     }
 
     @Override
-    public void setDefaultDriver(int index) {
-        TornadoAcceleratorDriver tmp = tornadoVMDrivers[0];
-        tornadoVMDrivers[0] = tornadoVMDrivers[index];
-        tornadoVMDrivers[index] = tmp;
+    public void setDefaultBackend(int index) {
+        TornadoAcceleratorBackend tmp = tornadoVMBackends[0];
+        tornadoVMBackends[0] = tornadoVMBackends[index];
+        tornadoVMBackends[index] = tmp;
     }
 
     @SuppressWarnings("unchecked")
     @Override
-    public <D extends TornadoDriver> D getDriver(Class<D> type) {
-        for (TornadoAcceleratorDriver driver : tornadoVMDrivers) {
-            if (driver.getClass() == type) {
-                return (D) driver;
+    public <D extends TornadoBackend> D getBackend(Class<D> type) {
+        for (TornadoAcceleratorBackend backend : tornadoVMBackends) {
+            if (backend.getClass() == type) {
+                return (D) backend;
             }
         }
         return null;
@@ -236,17 +226,17 @@ public final class TornadoCoreRuntime extends TornadoLogger implements TornadoRu
 
     @Override
     public TornadoVMBackendType getBackendType(int index) {
-        return tornadoVMDrivers[index].getBackendType();
+        return tornadoVMBackends[index].getBackendType();
     }
 
     @Override
-    public int getNumDrivers() {
-        return driverCount;
+    public int getNumBackends() {
+        return backendCount;
     }
 
     @Override
-    public TornadoAcceleratorDevice getDefaultDevice() {
-        return (tornadoVMDrivers == null || tornadoVMDrivers[DEFAULT_DRIVER] == null) ? JVM : (TornadoAcceleratorDevice) tornadoVMDrivers[DEFAULT_DRIVER].getDefaultDevice();
+    public TornadoXPUDevice getDefaultDevice() {
+        return (tornadoVMBackends == null || tornadoVMBackends[DEFAULT_BACKEND] == null) ? JVM : (TornadoXPUDevice) tornadoVMBackends[DEFAULT_BACKEND].getDefaultDevice();
     }
 
 }
